syntax = "proto3";
package native_messaging;

import "shared.proto";
enum ProtoNativeStateType {
    YOUTUBE_STATE = 0;
    ARTICLE_STATE = 1;
    PDF_STATE = 2;
}

message ProtoNativeYoutubeState {
    string type = 1;
    string url = 2;
    string title = 3;
    string transcript = 4;
    float current_time = 5;
    string video_frame_base64 = 6;
    int32 video_frame_width = 7;
    int32 video_frame_height = 8;
    shared.ProtoImageFormat video_frame_format = 9;
}

message ProtoNativeYoutubeSnapshot {
    string type = 1;
    float current_time = 2;
    string video_frame_base64 = 3;
    int32 video_frame_width = 4;
    int32 video_frame_height = 5;
    shared.ProtoImageFormat video_frame_format = 6;
}

message ProtoNativeArticleAsset {
    string type = 1;
    string content = 2;
    string text_content = 3;
    optional string selected_text = 4;

    string title = 5;
    string site_name = 6;
    string language = 7;
    string excerpt = 8;

    int32 length = 9;
}